--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div id="container"></div>
+  <script src="./dist/common.js"></script>
   <script src="./dist/main.js"></script>
 </body>
 
